--- a/public/assets/css/pages.css
+++ b/public/assets/css/pages.css
@@ -18,13 +18,148 @@
     width: 250px;
     text-align: center;
     margin: 30px;
+    
 }
+
+
 
 .page-container {
     display: flex;
     flex-direction: column;
     height: 100%;
 
+    /*Barre de recherche*/
+    .search {
+        display: flex;
+        flex-direction: row;
+        justify-content: right;
+        padding: 10px 0;
+        margin-top: -92px;
+    
+        #search-form {
+            display: flex;
+            flex-direction: row;
+    
+            input {
+                height: 15px;
+                margin: 0;
+                border: 2.5px solid var(--light_primary_color);
+            }
+    
+            button {
+                width: 0;
+                height: 0;
+                padding: 25px;
+                text-align: center;
+                margin: auto 0 auto 5px;
+                cursor: pointer;
+    
+                img {
+                    position: relative;
+                    top: -12px;
+                    left: -12px;
+                    margin: 0;
+                }
+            }
+        }
+    }
+
+    .page-containt {
+        margin: 0 30px;
+
+        /*PAGE REPERTOIRE*/
+
+        .cards-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 50px;
+            padding: 10px;
+            gap: 20px;
+            
+            #add-user-card {
+                background-color: var(--dark_secondary_color);
+                border-radius: 8px;
+                max-width: 20%;
+                flex: 1 1 calc(25% - 40px);
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+
+                img {
+                    margin: auto;
+                }
+                p {
+                    font-family: var(--font-body-bold);
+                }
+            }
+
+            .user-card {
+                background-color: #fff;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                max-width: 20%;
+                flex: 1 1 calc(25% - 40px);
+                text-align: center;
+                height: 250px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                .card-header {
+                    background-color: var(--light_primary_color);
+                    border-top-left-radius: 8px;
+                    border-top-right-radius: 8px;
+                    height: 50%;
+                    overflow: hidden;
+
+                    h4 {
+                        color: var(--color_black);
+                        font-size: 100px;
+                        padding-top: 25px;
+                    }
+
+                    img {
+                        max-width: 100%;
+                        border-top-left-radius: 8px;
+                        border-top-right-radius: 8px;           
+                    }
+                }
+
+                .card-main {
+                    p {
+                        margin: 0;
+                    }
+    
+                    .user-name {
+                        font-family: var(--font-body-bold);
+                    }
+                }
+
+                .card-footer {
+                    background-color: var(--dark_secondary_color);
+                    width: 80%;
+                    margin: 5px auto 15px auto;
+                    padding: 3px;
+                    border-radius: 10px;                  
+
+                    a {
+                        text-decoration: none;
+                        color: var(--color_black);
+                    }
+                }
+            }
+        }
+
+
+
+
+
+        
+    }
+
+    /*PAGE CONTACT*/
     form {
         display: flex;
         flex-direction: column;
@@ -62,6 +197,8 @@
     }
 }
 
+
+/*PAGE COMPTE*/
 .my-account {
     display: flex;
     height: 100%;
@@ -100,147 +237,6 @@
             cursor: pointer;
             margin-left: 10px;
         }
-    }
-
-    .modal-container-mail, .modal-container-phone, .modal-container-location, .modal-container-password {
-        display: none;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        width: 100vw;
-        height: 100vh;
-
-        .overlay {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: #333333d3;
-        }
-        .modal {
-            width: 95%;
-            max-width: 500px;
-            min-width: 300px;
-            background: white;
-            border-radius: 15px;
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            overflow: hidden;
-        }
-
-        .modal-header {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            width: 100%;
-            background-color: var(--light_primary_color);
-            
-            p {
-                margin: 0;
-                padding: 12px 0 10px 11px;
-                color: var(--color_white);
-            }   
-
-            button {
-                border-radius: 50%;
-                border: none;
-                margin: 10px;
-                width: 20px;
-                height: 20px;
-                cursor: pointer;
-                background-color: var(--color_light_grey_1);
-
-                img {
-                    position: relative;
-                    top: 2px;
-                    left: -0.5px;
-                }
-            }
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            margin: 0 auto;
-            background-color: var(--light_secondary_color);
-
-            label {
-                padding: 12px 0 5px 12px;
-                vertical-align: middle;
-
-                img {
-                    width: 3%;
-                    margin-right: 5px;
-                }
-            }
-
-            input {
-                width: 92%;
-                margin: 0 auto;
-                padding: 8px;
-                border-radius: 10px;
-                border: none;
-            }
-
-            .edit-location {
-                display: flex;
-                width: 95%;
-                margin: 0 auto;
-
-                #number {
-                    width: 20px;
-                    margin: 0 5px 0 0;
-                    text-align: center;
-                }
-                #street {
-                    width: 140px;
-                }
-                #zip-code {
-                    width: 45px;
-                    margin: 0 5px 0 5px;
-                }
-                #city {
-                    width: 110px;
-                }
-                #country {
-                    width: 60px;
-                    margin: 0 0 0 5px;
-                }
-            }
-
-            button {
-                background-color: var(--light_primary_color);
-                color: var(--color_white);
-                width: 95%;
-                margin: 10px auto 15px auto;
-                padding: 8px;
-                border-radius: 10px;
-                border: none;
-                cursor: pointer;
-                display: flex;
-                justify-content: center;
-
-                .check-update {
-                    background-color: var(--color_white);
-                    width: 0;
-                    height: 0;
-                    padding: 8px;
-                    border-radius: 4px;
-                    margin-right: 5px;
-                    
-                    img {
-                        position: relative;
-                        top: -6px;
-                        left: -4px;
-                    }
-                }
-            }
-        }
-    }
-    .modal-container-mail.active, .modal-container-phone.active, .modal-container-location.active, .modal-container-password.active {
-        display: block;
     }
 
     .my-account-right {
