--- a/public/assets/css/connection.css
+++ b/public/assets/css/connection.css
@@ -32,10 +32,6 @@
         padding: 10px;
         width: 80%;
 
-        #pwd-success {
-            color: var(--secondary_color);
-        }
-
         .title {
             width: 100%;
             margin: auto;
@@ -67,12 +63,6 @@
                     margin-top: 5px;
                     padding: 0 0 0 10px;
                 }
-    
-                .connection-error {
-                    margin-top: 5px;
-                    margin-bottom: 0;
-                    color: red;
-                }
 
                 #forgottenPwd {
                     margin-top: 5px;
@@ -85,9 +75,7 @@
                         
                     }
                 }
-    
-                
-    
+
                 button {
                     width: 100%;
                     height: 42px;
@@ -99,6 +87,7 @@
                     align-items: center;
                     justify-content: center;
                     display: inline-flex;
+                    cursor: pointer;
     
                     img {
                         margin-right: 10px;
