--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -54,7 +54,7 @@
     background: var(--information-color);
 }
 
-.modal-container-mail, .modal-container-phone, .modal-container-location, .modal-container-password, .modal-container-add-user, .modal-container-gender, .modal-container-name, .modal-container-status {
+.modal-container-mail, .modal-container-phone, .modal-container-location, .modal-container-password, .modal-container-add-user, .modal-container-gender, .modal-container-name, .modal-container-status, .modal-container-archive {
     display: none;
     position: fixed;
     top: 0px;
@@ -225,6 +225,11 @@
             }
         }
 
+        .edit-name {
+            margin: 10px auto 0 auto;
+            width: 100%;
+        }
+
         .edit-location {
             display: flex;
             width: 95%;
@@ -302,6 +307,6 @@
         }
     }
 }
-.modal-container-mail.active, .modal-container-phone.active, .modal-container-location.active, .modal-container-password.active, .modal-container-add-user.active, .modal-container-gender.active, .modal-container-name.active, .modal-container-status.active {
+.modal-container-mail.active, .modal-container-phone.active, .modal-container-location.active, .modal-container-password.active, .modal-container-add-user.active, .modal-container-gender.active, .modal-container-name.active, .modal-container-status.active, .modal-container-archive.active {
     display: block;
 }
