--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -1,15 +1,7 @@
-.modal-container-mail,
-.modal-container-phone,
-.modal-container-location,
-.modal-container-password,
 .modal-container-add-user,
 .modal-container-add-formation,
 .modal-container-add-sector,
-.modal-container-add-subject,
-.modal-container-gender,
-.modal-container-name,
-.modal-container-status,
-.modal-container-archive {
+.modal-container-add-subject {
 
   position: fixed;
   top: 0px;
@@ -27,7 +19,7 @@
     width: 95%;
     max-width: 500px;
     min-width: 300px;
-    background: var(--color-secondary-light);
+    background: white;
     border-radius: 15px;
     position: absolute;
     top: 52%;
@@ -181,10 +173,10 @@
         }
       }
 
-      #male-gender {
-        margin-left: 15px;
-      }
-    }
+            .male-gender {
+                margin-left: 15px;
+            }
+        }
 
     .edit-location {
       display: flex;
@@ -263,14 +255,6 @@
     }
   }
 }
-.modal-container-mail.active,
-.modal-container-phone.active,
-.modal-container-location.active,
-.modal-container-password.active,
-.modal-container-add-user.active,
-.modal-container-gender.active,
-.modal-container-name.active,
-.modal-container-status.active,
-.modal-container-archive.active {
-    display: block;
+.modal-container-add-user {
+    display: none;
 }
